<resources>
    <string name="app_name">Smart Secretary</string>
    <string name="weather_title">Weather</string>
    <string name="ttc_title">TTC</string>
    <string name="news_title">CBC News</string>
    <string name="timetable_title">Timetable</string>
    <string name="cancellation_title">Class Cancellations</string>
    <string name="photoframe_title">Digital Photo Frame</string>

    <!-- For user login -->
    <string name="login">Login</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="create_user_account">Create User Account</string>

    <!-- Facebook -->
    <string name="facebook_id">1164608026949206</string>
</resources>