<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp" android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/btnLoginFaceBook"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="Remember Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_below="@+id/btn_Login"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/textView1"
        android:layout_toStartOf="@+id/textView1" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/et_password"
        android:layout_alignRight="@+id/et_username"
        android:layout_alignEnd="@+id/et_username" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/register"
        android:layout_below="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password" />

</RelativeLayout>
